# cryptoauthlib

./: CMakeLists.txt  SECURITY.md  license.txt  module.xml  package.yml  patch.md  release_notes.md
app/api_206a/: api_206a.c  api_206a.h
app/ip_protection/: symmetric_authentication.c  symmetric_authentication.h
app/kit_host/: ascii_kit_host.c  ascii_kit_host.h
app/pkcs11/: trust_pkcs11_config.c
app/secure_boot/: io_protection_key.h  secure_boot.c  secure_boot.h  secure_boot_memory.h
app/tng/: tflxtls_cert_def_4_device.c  tflxtls_cert_def_4_device.h  tng_atca.c  tng_atca.h  tng_atcacert_client.c  tng_atcacert_client.h  tng_root_cert.c  tng_root_cert.h  tnglora_cert_def_1_signer.c  tnglora_cert_def_1_signer.h  tnglora_cert_def_2_device.c  tnglora_cert_def_2_device.h  tnglora_cert_def_4_device.c  tnglora_cert_def_4_device.h  tngtls_cert_def_1_signer.c  tngtls_cert_def_1_signer.h  (+4 more)
harmony/: module.py
lib/: CMakeLists.txt  atca_config.h.in  atca_utils_sizes.c
lib/atcacert/: CMakeLists.txt
lib/atcacert/cmake/: atcacert.cmake
lib/calib/: CMakeLists.txt  calib_counter.c
lib/calib/cmake/: checks.cmake  ecc108_checks.cmake  ecc204_checks.cmake  ecc206_checks.cmake  ecc508_checks.cmake  ecc608_checks.cmake  sha104_checks.cmake  sha105_checks.cmake  sha106_checks.cmake  sha204_checks.cmake  sha206_checks.cmake  ta010_checks.cmake
lib/jwt/: CMakeLists.txt
lib/jwt/cmake/: checks.cmake
python/: LICENSE.txt  setup.py
test/: CMakeLists.txt  atca_test.c  atca_test.h  atca_test_config.c  atca_test_console.c  atca_utils_atecc608.c  cmd-processor.c  cmd-processor.h
(+213 files in other folders)
